Changed so works before jdk 21